@@ -1,3 +1,8 @@
+2000-03-18  Yoshiki Hayashi  <yoshiki@xemacs.org>
+
+	* mime-view.el (mime-display-gzipped): Temporaly hack for FSF Emacs
+	until new FLIM is released.
+
 2000-03-16  Yoshiki Hayashi  <yoshiki@xemacs.org>
 
 	* mime-view.el (mime-display-gzipped): Make it FSF Emacs friendly.
